--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.7.9'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'org.delivery'
-version = '1.0-SNAPSHOT'
+allprojects {
 
-repositories {
-    mavenCentral()
+    repositories {
+        mavenCentral()
+    }
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+bootJar {
+    enabled = false
 }
 
-test {
-    useJUnitPlatform()
+jar {
+    enabled = false
 }
